@@ -78,6 +78,7 @@
                             --add-opens java.base/java.util=ALL-UNNAMED
                             --add-opens java.base/java.util.concurrent=ALL-UNNAMED
                             --add-opens java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                            -Dnet.bytebuddy.experimental=true
                         </argLine>
                     </configuration>
                 </plugin>
